fixed null checking for spawnpoints